tests/neg/java-ann-super-class3/Test.scala
def test =
  // Refchecks error
  new Ann {} // error
